@@ -2431,7 +2431,7 @@
       <property name="can_focus">True</property>
       <property name="relief">GTK_RELIEF_NORMAL</property>
       <property name="focus_on_click">True</property>
-      <signal name="clicked" handler="on_cancel_button1_clicked" last_modification_time="Sat, 06 Mar 2004 18:01:37 GMT"/>
+      <signal name="clicked" handler="on_bn_close_allg" last_modification_time="Tue, 07 Dec 2004 10:25:55 GMT"/>
     </widget>
   </child>
 
@@ -2575,7 +2575,7 @@
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
 	      <property name="response_id">-7</property>
-	      <signal name="clicked" handler="on_bn_about_close_clicked" last_modification_time="Fri, 13 Aug 2004 00:39:42 GMT"/>
+	      <signal name="clicked" handler="on_bn_close_allg" last_modification_time="Tue, 07 Dec 2004 10:16:39 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
@@ -4035,7 +4035,7 @@ imskpe
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
 	      <property name="response_id">-5</property>
-	      <signal name="clicked" handler="on_bn_credits_ok_clicked" last_modification_time="Mon, 30 Aug 2004 13:12:31 GMT"/>
+	      <signal name="clicked" handler="on_bn_close_allg" last_modification_time="Tue, 07 Dec 2004 10:18:24 GMT"/>
 	    </widget>
 	  </child>
 	</widget>
@@ -4611,7 +4611,7 @@ Andrew Simpson, Jon Iles, Nick Ing-Simmons, Andreas Voegele
 	      <property name="relief">GTK_RELIEF_NORMAL</property>
 	      <property name="focus_on_click">True</property>
 	      <property name="response_id">-6</property>
-	      <signal name="clicked" handler="on_bn_file_open_cancel_clicked" last_modification_time="Thu, 02 Dec 2004 13:07:47 GMT"/>
+	      <signal name="clicked" handler="on_bn_close_allg" last_modification_time="Tue, 07 Dec 2004 10:25:46 GMT"/>
 	    </widget>
 	  </child>
 
@@ -4732,7 +4732,7 @@ Andrew Simpson, Jon Iles, Nick Ing-Simmons, Andreas Voegele
       <property name="can_focus">True</property>
       <property name="relief">GTK_RELIEF_NORMAL</property>
       <property name="focus_on_click">True</property>
-      <signal name="clicked" handler="on_font_cancel_clicked" last_modification_time="Sun, 05 Dec 2004 20:22:31 GMT"/>
+      <signal name="clicked" handler="on_bn_close_allg" last_modification_time="Tue, 07 Dec 2004 10:25:37 GMT"/>
     </widget>
   </child>
 
