@@ -1,4 +1,4 @@
-# Makefile.in generated by automake 1.8.5 from Makefile.am.
+# Makefile.in generated by automake 1.8.3 from Makefile.am.
 # src/klatt80/Makefile.  Generated from Makefile.in by configure.
 
 # Copyright (C) 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002,
@@ -23,7 +23,7 @@ pkglibdir = $(libdir)/imskpe
 pkgincludedir = $(includedir)/imskpe
 top_builddir = ../..
 am__cd = CDPATH="$${ZSH_VERSION+.}$(PATH_SEPARATOR)" && cd
-INSTALL = /usr/bin/ginstall -c
+INSTALL = /usr/bin/install -c
 install_sh_DATA = $(install_sh) -c -m 644
 install_sh_PROGRAM = $(install_sh) -c
 install_sh_SCRIPT = $(install_sh) -c
@@ -48,13 +48,13 @@ CONFIG_CLEAN_FILES =
 SOURCES =
 DIST_SOURCES =
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/bol/imskpe/imskpe/missing --run aclocal-1.8
+ACLOCAL = ${SHELL} /home/users7/madsacas/imskpe/missing --run aclocal-1.8
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /home/bol/imskpe/imskpe/missing --run tar
-AUTOCONF = ${SHELL} /home/bol/imskpe/imskpe/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/bol/imskpe/imskpe/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/bol/imskpe/imskpe/missing --run automake-1.8
+AMTAR = ${SHELL} /home/users7/madsacas/imskpe/missing --run tar
+AUTOCONF = ${SHELL} /home/users7/madsacas/imskpe/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/users7/madsacas/imskpe/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/users7/madsacas/imskpe/missing --run automake-1.8
 AWK = gawk
 CATALOGS =  de.gmo
 CATOBJEXT = .gmo
@@ -91,13 +91,13 @@ LEX_OUTPUT_ROOT = lex.yy
 LIBOBJS = 
 LIBS =   
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/bol/imskpe/imskpe/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/users7/madsacas/imskpe/missing --run makeinfo
 MKINSTALLDIRS = ./mkinstalldirs
 MSGFMT = /usr/bin/msgfmt
 OBJEXT = o
 PACKAGE = imskpe
 PACKAGE_BUGREPORT = 
-PACKAGE_CFLAGS = -I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/pango-1.0 -I/usr/X11R6/include -I/usr/include/freetype2 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  
+PACKAGE_CFLAGS = -I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/pango-1.0 -I/usr/X11R6/include -I/usr/include/freetype2 -I/usr/include/freetype2/config -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  
 PACKAGE_LIBS = -Wl,--export-dynamic -lgtk-x11-2.0 -lgdk-x11-2.0 -latk-1.0 -lgdk_pixbuf-2.0 -lm -lpangoxft-1.0 -lpangox-1.0 -lpango-1.0 -lgobject-2.0 -lgmodule-2.0 -ldl -lglib-2.0  
 PACKAGE_NAME = 
 PACKAGE_STRING = 
@@ -132,7 +132,7 @@ exec_prefix = ${prefix}
 host_alias = 
 includedir = ${prefix}/include
 infodir = ${prefix}/info
-install_sh = /home/bol/imskpe/imskpe/install-sh
+install_sh = /home/users7/madsacas/imskpe/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localstatedir = ${prefix}/var
@@ -308,7 +308,7 @@ uninstall-am: uninstall-info-am
 #INCLUDES = \
 #	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
 #	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
-#	-I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/pango-1.0 -I/usr/X11R6/include -I/usr/include/freetype2 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  
+#	-I/usr/include/gtk-2.0 -I/usr/lib/gtk-2.0/include -I/usr/include/atk-1.0 -I/usr/include/pango-1.0 -I/usr/X11R6/include -I/usr/include/freetype2 -I/usr/include/freetype2/config -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include  
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
